.template_all/project.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: ${project}
   labels:
     name: ${project}
---
apiVersion: v1
kind: Namespace
metadata:
   name: ${project}-test
   labels:
     name: ${project}-test
---
apiVersion: v1
kind: Namespace
metadata:
   name: ${project}-test
   labels:
     name: ${project}-test
