.template_all/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ${app}
  name: ${app}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${app}
  template:
    metadata:
      labels:
        app: ${app}
        logging: 'true' 
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      containers:
      - image: ${image}
        name: ${app}
        imagePullPolicy: Always
        ports:
        - name: service-port
          containerPort: ${port}
        startupProbe:
          tcpSocket:
            port: service-port
          failureThreshold: 20
          periodSeconds: 5
          initialDelaySeconds: 20
        readinessProbe:
          tcpSocket:
            port: service-port
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: service-port
          initialDelaySeconds: 15
          periodSeconds: 3
        resources:
          requests:
            cpu: "100m"
            memory: "512Mi"
          limits:
            memory: "1024Mi"
