.template_all/deployment_mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  serviceName: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
        logging: 'true'
    spec:
      containers:
        - name: mysql
          image: nexus.gp51.com/library/percona:8.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "1000m"
              memory: "4Gi"
            limits:
              memory: "5Gi"
          volumeMounts:
            - mountPath: /etc/my.cnf.d
              name: conf
            - mountPath: /var/lib/mysql
              name: datadir
      volumes:
        - name: conf
          configMap:
            name: mysql
        - name: datadir
          hostPath:
            path: /data/k8sdata/${project}/mysql
