.template_all/service_mysql.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql
  labels:
    app: mysql         
spec:
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
    nodePort: ${port}
    protocol: TCP
  selector:
    app: mysql
  type: NodePort
