.template_all/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${app}
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "*.gp51.com" 
    # nginx.ingress.kubernetes.io/cors-allow-headers: "*"
    # nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  rules:
    # 定义域名
    - host: test.gp51.com
      http:
        paths:
        # 不同path转发到不同端口
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: app-name
                port:
                  number: 8080
